Add Weather API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,64 +1,17 @@
-<h4>Template for main page:</h4>
-<div class="container-fluid">
-  <div class="well">
-    <h2>Enter a zipcode:</h2>
-    <input class="form-control" placeholder="Zipcode" type="text" id="addLocation" />
-    <br />
-    <button class="btn btn-primary" id="addLocationBtn">Add location</button>
+<div class="main">
+  <header class="mx-auto text-center px-5 py-3">
+    <h1 class="display-4">My weather app</h1>
+    <p class="lead">
+      Discover weather forecasts and save data for 5 cities on My Weather App!
+      <br />Access info via zip codes or names, and stay updated on the go.
+    </p>
+  </header>
+
+  <div class="container">
+    <router-outlet></router-outlet>
   </div>
-  <div>
-    <div class="well flex">
-      <div>
-        <h3>Rancho Cordova (95742)</h3>
-        <h4>Current conditions: Clouds</h4>
-        <h4>Temperatures today:</h4>
-        <p>Current 58 - Max 65 - Min 48</p>
-        <p>
-          <a href="/forecast/95742">Show 5-day forecast for Rancho Cordova</a>
-        </p>
-      </div>
-      <div>
-        <span class="close">×</span>
-        <img src="https://www.angulartraining.com/images/weather/sun.png" />
-      </div>
-    </div>
-  </div>
-</div>
-<hr />
-<h4>Template for 5-day forecast page:</h4>
-<div class="container-fluid">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">5-day forecast for Rancho Cordova</h3>
-    </div>
-    <ul class="list-group">
-      <!---->
-      <li class="list-group-item">
-        Monday, Mar 23: Rain - Min: 45 - Max: 59
 
-        <img class="icon" src="https://www.angulartraining.com/images/weather/rain.png" />
-      </li>
-      <li class="list-group-item">
-        Tuesday, Mar 24: Rain - Min: 39 - Max: 52
-
-        <img class="icon" src="https://www.angulartraining.com/images/weather/sun.png" />
-      </li>
-      <li class="list-group-item">
-        Wednesday, Mar 25: Rain - Min: 36 - Max: 54
-
-        <img class="icon" src="https://www.angulartraining.com/images/weather/rain.png" />
-      </li>
-      <li class="list-group-item">
-        Thursday, Mar 26: Clear - Min: 37 - Max: 56
-
-        <img class="icon" src="https://www.angulartraining.com/images/weather/clouds.png" />
-      </li>
-      <li class="list-group-item">
-        Friday, Mar 27: Clear - Min: 40 - Max: 57
-
-        <img class="icon" src="https://www.angulartraining.com/images/weather/snow.png" />
-      </li>
-    </ul>
-  </div>
-  <button class="btn btn-success" tabindex="0" id="mainPageBtn">&lt; Back to main page</button>
+  <footer class="bg-dark text-white text-center small font-weight-light p-3">
+    &copy; 2023 Ziscko. All rights reserved.
+  </footer>
 </div>
