--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,22 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
-.flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-body {
-  padding-top: 10px;
-}
-
-.icon {
-  width: 45px;
-  height: 45px;
-  position: absolute;
-  right: 20px;
-  top: -2px;
+.location {
+  background-color: #f4f4f4;
 }
