Update forecast interfaces

--- a/src/app/components/forecast/forecast.component.html
+++ b/src/app/components/forecast/forecast.component.html
@@ -1,21 +1,21 @@
 <div
-  *ngIf="forecastData?.location"
+  *ngIf="forecastData"
   class="mt-2 p-4 col-md-12 rounded mx-auto flex font-weight-light location"
 >
   <h3>
-    {{ forecastData?.location?.name }}, {{ forecastData?.location?.country }}
+    {{ forecastData.location.name }}, {{ forecastData.location.country }}
     {{ hasZipCode ? '(' + id + ')' : '' }}
   </h3>
 
   <div *ngFor="let forecast of forecastData?.forecast?.forecastday" class="row border-bottom">
     <div class="col-md-11 py-4">
       {{ forecast?.date | date: 'fullDate' }}
-      - High {{ forecast?.day.maxtemp_c }}°C ({{ forecast?.day.maxtemp_f }}°F ) - Low
-      {{ forecast?.day.mintemp_c }}°C ({{ forecast?.day.mintemp_f }}°F ) -
-      {{ forecast?.day.condition.text }}
+      - High {{ forecast.day.maxtemp_c }}°C ({{ forecast.day.maxtemp_f }}°F ) - Low
+      {{ forecast.day.mintemp_c }}°C ({{ forecast.day.mintemp_f }}°F ) -
+      {{ forecast.day.condition.text }}
     </div>
     <div class="col-md-1 d-flex align-items-center">
-      <img class="icon" src="{{ forecast?.day.condition.icon }}" />
+      <img class="icon" src="{{ forecast.day.condition.icon }}" />
     </div>
   </div>
 </div>
