--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,6 +14,7 @@
         class="btn btn-block btn-dark font-weight-light"
         type="button"
         (click)="addLocation(locationInput.value)"
+        [disabled]="!newLocation"
       >
         Add location
       </button>
