--- a/src/app/components/forecast/forecast.component.html
+++ b/src/app/components/forecast/forecast.component.html
@@ -1,23 +1,27 @@
-<div
-  *ngIf="forecastData"
-  class="mt-2 p-4 col-md-12 rounded mx-auto flex font-weight-light location"
->
-  <h3>
-    {{ forecastData.location.name }}, {{ forecastData.location.country }}
-    {{ hasZipCode ? '(' + id + ')' : '' }}
-  </h3>
+<div class="mt-2 p-4 col-md-12 rounded mx-auto flex font-weight-light location">
+  <ng-container *ngIf="forecastData; else loadingBlock">
+    <h3>
+      {{ forecastData.location.name }}, {{ forecastData.location.country }}
+      {{ hasZipCode ? '(' + id + ')' : '' }}
+    </h3>
 
-  <div *ngFor="let forecast of forecastData?.forecast?.forecastday" class="row border-bottom">
-    <div class="col-md-11 py-4">
-      {{ forecast?.date | date: 'fullDate' }}
-      - High {{ forecast.day.maxtemp_c }}°C ({{ forecast.day.maxtemp_f }}°F ) - Low
-      {{ forecast.day.mintemp_c }}°C ({{ forecast.day.mintemp_f }}°F ) -
-      {{ forecast.day.condition.text }}
+    <div
+      *ngFor="let forecast of forecastData.forecast.forecastday; let last = last"
+      class="row border-bottom"
+      [ngClass]="{ 'border-bottom': !last }"
+    >
+      <div class="col-md-11 py-4">
+        {{ forecast?.date | date: 'fullDate' }}
+        - High {{ forecast.day.maxtemp_c }}°C ({{ forecast.day.maxtemp_f }}°F ) - Low
+        {{ forecast.day.mintemp_c }}°C ({{ forecast.day.mintemp_f }}°F ) -
+        {{ forecast.day.condition.text }}
+      </div>
+      <div class="col-md-1 d-flex align-items-center">
+        <img class="icon" src="{{ forecast.day.condition.icon }}" />
+      </div>
     </div>
-    <div class="col-md-1 d-flex align-items-center">
-      <img class="icon" src="{{ forecast.day.condition.icon }}" />
-    </div>
-  </div>
+  </ng-container>
+  <ng-template #loadingBlock>Loading...</ng-template>
 </div>
 <button type="button" class="btn btn-dark my-4 font-weight-light" (click)="navigateBack()">
   Go back
