--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,27 @@
+body {
+  padding-top: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .location {
-  background-color: #f4f4f4;
+  backdrop-filter: blur(10px);
+  border: solid 1px #ededed;
+  box-shadow: 0 0 20px 0px #c4c4c44f;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 0 0 40px 0px #7575754f;
+    transition: all 0.3s;
+  }
+}
+
+footer {
+  margin-top: auto;
 }
