Add background component to home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <header class="mx-auto text-center px-5 py-3">
-    <h1 class="display-4">My weather app</h1>
-    <p class="lead">
+    <h1 class="font-weight-normal">My weather app</h1>
+    <p class="font-weight-light">
       Discover weather forecasts and save data for 5 cities on My Weather App!
       <br />Access info via zip codes or names, and stay updated on the go.
     </p>
@@ -10,6 +10,8 @@
   <div class="container">
     <router-outlet></router-outlet>
   </div>
+
+  <app-background-clouds> </app-background-clouds>
 
   <footer class="bg-dark text-white text-center small font-weight-light p-3">
     &copy; 2023 Ziscko. All rights reserved.
