Add custom image pipe

--- a/src/app/components/forecast/forecast.component.html
+++ b/src/app/components/forecast/forecast.component.html
@@ -16,8 +16,8 @@
         {{ forecast.day.mintemp_c }}°C ({{ forecast.day.mintemp_f }}°F ) -
         {{ forecast.day.condition.text }}
       </div>
-      <div class="col-md-1 d-flex align-items-center">
-        <img class="icon" src="{{ forecast.day.condition.icon }}" />
+      <div *ngIf="forecast.day.condition.icon as image" class="col-md-1 d-flex align-items-center">
+        <img class="icon" [src]="image | icon" />
       </div>
     </div>
   </ng-container>
