Add custom appHoverHighlight directive

--- a/src/app/components/background-clouds/background-clouds.component.html
+++ b/src/app/components/background-clouds/background-clouds.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngFor="let cloudNumber of [1, 2, 3, 4, 5, 6]; let i = index">
   <div class="x{{ i + 1 }}">
-    <div class="cloud"></div>
+    <div class="cloud" appHoverHighlight></div>
   </div>
 </ng-container>
