--- a/src/app/components/background-clouds/background-clouds.component.scss
+++ b/src/app/components/background-clouds/background-clouds.component.scss
@@ -4,7 +4,6 @@
   right: 0;
   padding-top: 50px;
   position: fixed;
-  z-index: -1;
 }
 
 @keyframes animateCloud {
@@ -49,32 +48,39 @@
 .cloud {
   background: #c8c8c8;
   border-radius: 100px;
+  cursor: pointer;
   height: 145px;
   position: relative;
   width: 350px;
   opacity: 0.2;
+
+  &:after,
+  &:before {
+    background: #c8c8c8;
+    content: '';
+    position: absolute;
+    z-index: -1;
+  }
+
+  &:after {
+    border-radius: 100px;
+    height: 100px;
+    left: 50px;
+    top: -50px;
+    width: 100px;
+  }
+
+  &:before {
+    border-radius: 200px;
+    width: 180px;
+    height: 180px;
+    right: 50px;
+    top: -90px;
+  }
 }
 
-.cloud:after,
-.cloud:before {
-  background: #c8c8c8;
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-.cloud:after {
-  border-radius: 100px;
-  height: 100px;
-  left: 50px;
-  top: -50px;
-  width: 100px;
-}
-
-.cloud:before {
-  border-radius: 200px;
-  width: 180px;
-  height: 180px;
-  right: 50px;
-  top: -90px;
+.hover-effect,
+.hover-effect::after,
+.hover-effect::before {
+  background: #007bff;
 }
